--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "vue"
   ],
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --debug",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
